# soupawhisper

./: README.md  config.example.ini  dictate.py  install.sh  pyproject.toml
wayland/: soupawhisper-daemon.py  soupawhisper-start  soupawhisper-start-todo  soupawhisper-stop  soupawhisper-stop-todo  soupawhisper-toggle  soupawhisper-toggle-todo  transcribe.py
