[tool.poetry]
name = "soupawhisper"
version = "0.2.0"
description = "Push-to-talk voice dictation for Wayland/Hyprland using faster-whisper"
authors = ["Kyle <kyle@ksred.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ksred/soupawhisper"
keywords = ["whisper", "dictation", "voice", "transcription", "speech-to-text", "wayland"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Wayland",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
faster-whisper = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
